load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["logverbosity.go"],
    importpath = "kubevirt.io/kubevirt/pkg/virtctl/adm/logverbosity",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/virtctl/templates:go_default_library",
        "//staging/src/kubevirt.io/client-go/kubecli:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
    ],
)
